feat: add android device actions
